force-app/main/default/objects/Bird_Species__c/Bird_Species__c.object-meta.xml
<CustomObject>
    <label>Bird Species</label>
    <pluralLabel>Bird Species</pluralLabel>
    <nameField>
        <label>Common Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>