force-app/main/default/objects/Bird_Species__c/fields/Average_Size_Cm__c.field-meta.xml
<CustomField>
    <fullName>Average_Size_Cm__c</fullName>
    <label>Average Size (cm)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>