force-app/main/default/objects/Bird_Species__c/fields/Conservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Status__c</fullName>
    <label>Conservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Least Concern</fullName>
                <default>true</default>
                <label>Least Concern</label>
            </value>
            <value>
                <fullName>Near Threatened</fullName>
            </value>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
            <value>
                <fullName>Endangered</fullName>
            </value>
            <value>
                <fullName>Critically Endangered</fullName>
            </value>
            <value>
                <fullName>Extinct in the Wild</fullName>
            </value>
            <value>
                <fullName>Extinct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>