force-app/main/default/objects/Bird_Species__c/fields/Scientific_Name__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Name__c</fullName>
    <label>Scientific Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>